--- a/currency-converter/index.html
+++ b/currency-converter/index.html
@@ -19,11 +19,9 @@
 
                 <div class="input-container">
                     <label for="amount">Enter amount:</label>
-                    <input type="number" id="amount" name="amount" placeholder="Enter value" value="1" min="1" />
+                    <input type="number" class="amount" name="amount" placeholder="Enter value" value="1" min="1" />
                     <select class="fromCurrency">
-                        <option value="INR">INR</option>
-                        <option value="USD">USD</option>
-                        <option value="EUR">EUR</option>
+                       
                     </select>
                 </div>
 
@@ -31,11 +29,9 @@
 
                 <div class="input-container">
                     <label for="convertedAmount">Converted amount:</label>
-                    <input type="number" id="convertedAmount" placeholder="Result" readonly />
+                    <input type="number" class="convertedAmount" placeholder="Result" readonly />
                     <select class="toCurrency">
-                        <option value="INR">INR</option>
-                        <option value="USD">USD</option>
-                        <option value="EUR">EUR</option>
+                     
                     </select>
                 </div>
 
